fix(invity-authentication): verification body needs to be hidden intially

--- a/packages/invity-authentication/src/html/verification.html
+++ b/packages/invity-authentication/src/html/verification.html
@@ -7,7 +7,7 @@
         <!-- StylePlaceholder -->
     </head>
 
-    <body>
+    <body class="hidden">
         <form id="form" action="" method="">
             <div id="auth_email">
                 <input type="email" id="email" required="" class="hidden" />
